--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
+    "@kamiazya/ngx-speech-recognition": "^0.4.3",
     "angular-6-social-login": "^1.1.1",
     "angular-bootstrap-md": "^8.3.1",
     "hammerjs": "^2.0.8",
