--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@kamiazya/ngx-speech-recognition": "^0.4.3",
     "angular-6-social-login": "^1.1.1",
     "angular-bootstrap-md": "^8.3.1",
+    "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ngx-toastr": "^11.1.0",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
