--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "angular-6-social-login": "^1.1.1",
     "angular-bootstrap-md": "^8.3.1",
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-toastr": "^11.1.0",
+    "path": "^0.12.7",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
